# vane

./: .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  Dockerfile  Dockerfile.build-CVP  Makefile  README.md  app.py  config.json  definitions.yaml  duts.yaml  index.html  install_vane.sh  mkdocs.yaml  objects.inv  pyproject.toml  pytest.ini  setup.py  snapshot.yml  stable  versions.json
.github/: .markdownlint.yaml  pull_request_template.md
api_cli/: api.html  cli.html
develop/: 404.html  index.html  objects.inv
differentiation/: differentiation.html
docs/: .pre-commit-config.yaml  index.md  requirements.txt
executing_vane/: executing_vane.html
gui/: user_interface.html
installation/: docker_installation.html  installation_home.html  poetry_installation.html  python_installation.html
mkdocs/: mkdocs.yaml
new_tests/: master_def.yaml  test_definition.yaml  test_definition.yaml.j2  test_interfaces.py  test_lldp.py  test_mgmt_http_api.py  test_mlag.py  test_ntp_functionality.py  test_reachability.py  test_reload_cause.py  test_routing_table.py
nrfu_setup/: nrfu_setup.html
nrfu_tests/: master_def.yaml  test_bad_syslog_events.py  test_base_services_dns.py  test_base_services_ntp_association.py  test_base_services_redundancy_sso_test.py  test_base_services_tacacs.py  test_bgp_peers_state.py  test_definition.yaml  test_definition.yaml.j2  test_dns_base_services.py  test_hardware_fan_status.py  test_hardware_power_supply_voltage_status.py  test_interface_errors_and_discards.py  test_interfaces_mlag_status_check.py  test_interfaces_non_arista_optics.py  (+22 more)
(+197 files in other folders)
